Added error check if btc address is wrong also container for address page

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="./images/targetLogo.png">
+    <!-- BootStrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" >
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <title>Explorer</title>
 </head>
 <body>
