--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/eeefcb50ac.js"></script>
+    <script src="dist/main.js"></script>
     <title>Explorer</title>
 </head>
 <body>
