--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/eeefcb50ac.js"></script>
+    <script src="dist/bundle.js"></script>
     <title>Explorer</title>
 </head>
 <body>
     <div id="root">
     </div>
-<script type="text/javascript" src="main.js"></script></body>
+</body>
 </html>
